IALERT-3810: Add a new field to override creating a JSON object.