@@ -56,8 +56,8 @@ public class DefaultJiraCloudJobDetailsAccessor implements JiraCloudJobDetailsAc
         jiraCloudJobCustomFieldRepository.bulkDeleteByJobId(jobId);
         List<JiraCloudJobCustomFieldEntity> customFieldsToSave = jiraCloudJobDetails.getCustomFields()
                                                                      .stream()
-                                                                     .map(model -> new JiraCloudJobCustomFieldEntity(savedJobDetails.getJobId(), model.getFieldName(), model.getFieldValue()))
-                                                                     .collect(Collectors.toList());
+                                                                     .map(model -> new JiraCloudJobCustomFieldEntity(savedJobDetails.getJobId(), model.getFieldName(), model.getFieldValue(), model.isCreateJsonObject()))
+                                                                     .toList();
         List<JiraCloudJobCustomFieldEntity> savedCustomFields = jiraCloudJobCustomFieldRepository.saveAll(customFieldsToSave);
         savedJobDetails.setJobCustomFields(savedCustomFields);
         return savedJobDetails;
